tests/ui/parser/issues/issue-111416.rs
fn main() {
    let my = monad_bind(mx, T: Try); //~ ERROR invalid `struct` delimiters or `fn` call arguments
}
